fixing css overflows

--- a/src/components/Tabs/Speakers/speakers.css
+++ b/src/components/Tabs/Speakers/speakers.css
@@ -1,13 +1,13 @@
 .ayush {
     border-style: solid;
-    border-radius: 30px;
+    border-radius: 1vw;
     border-color: #90e0ef;
     text-align: center;
-    width: 300px;
-    height: 450px;
+    width: 19vw;
+    height: 60vh    ;
     float: left;
     font-family: Arial, Helvetica, sans-serif;
-    margin: 30px 40px;
+    margin: 3vh 3vw;
     background: linear-gradient(180deg, #022049 0%, rgba(2, 32, 73, 0) 100%);
 }
 .ayush:hover {
@@ -16,11 +16,11 @@
     ); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 }
 .pp {
-    margin: 20px;
-    width: 200px;
-    height: 220px;
+    margin: 1.5vw;
+    width: 15vw;
+    height: 15vw;
     border-style: solid;
-    border-radius: 10px;
+    border-radius: 1vw;
     border-color: #90e0ef;
 }
 .speakers_images {
@@ -29,7 +29,7 @@
 }
 .INF {
     /* height: 715px; */
-    height: 675px;
+    height: 95vh;
     overflow-x: hidden;
     overflow-y: scroll;
 }
@@ -37,75 +37,6 @@
 .speakersLink {
     display: flex;
     flex-direction: row;
-}
-
-@media (max-width: 668px) {
-    .INF {
-        height: 95vh;
-        overflow-x: hidden;
-        text-align: center;
-    }
-    .ayush:hover {
-        transform: scale(
-            /* 1.25 */ 1
-        ); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
-    }
-    .ayush {
-        margin-left: auto;
-        margin-right: 3vw;
-        background: linear-gradient(
-            180deg,
-            #022049 0%,
-            rgba(2, 32, 73, 0) 100%
-        );
-        border: 4px solid #90e0ef;
-        border-radius: 10px;
-        margin-bottom: 1vh;
-        width: 95%;
-        height: 70vh;
-    }
-
-    .speakers_images {
-        width: 80vw;
-        text-align: center;
-        position: relative;
-        left: 10vw;
-        padding-top: 2vh;
-    }
-}
-@media (min-width: 413px) and (max-width: 737px) {
-    .INF {
-        height: 95vh;
-        overflow-x: hidden;
-        text-align: center;
-    }
-    .ayush:hover {
-        transform: scale(
-            /* 1.25 */ 1
-        ); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
-    }
-    .ayush {
-        margin-left: auto;
-        margin-right: 3vw;
-        background: linear-gradient(
-            180deg,
-            #022049 0%,
-            rgba(2, 32, 73, 0) 100%
-        );
-        border: 4px solid #90e0ef;
-        border-radius: 10px;
-        margin-bottom: 1vh;
-        width: 95%;
-        height: 63vh;
-    }
-
-    .speakers_images {
-        width: 80vw;
-        text-align: center;
-        position: relative;
-        left: 10vw;
-        padding-top: 2vh;
-    }
 }
 @media (max-width: 321px) {
     .INF {
@@ -135,9 +66,87 @@
     }
 
     .speakers_images {
+        margin-bottom: 15vh;
         text-align: center;
     }
 }
+@media (max-width: 737px) and (max-width:910px) {
+    .INF {
+        height: 95vh;
+        overflow-x: hidden;
+        text-align: center;
+    }
+    .pp {
+        /* margin: 10vw; */
+        margin-top: 4vh;
+        margin-left:2.5vw;
+        margin-right:2.5vw;
+        width: 60vw;
+        height: 33vh;
+        border-style: solid;
+        border-radius: 1vw;
+        border-color: #90e0ef;
+    }
+    .ayush:hover {
+        transform: scale(
+            /* 1.25 */ 1
+        ); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+    }
+    .ayush {
+        /* padding: 3vw; */
+        background: linear-gradient(
+            180deg,
+            #022049 0%,
+            rgba(2, 32, 73, 0) 100%
+        );
+        border: 4px solid #90e0ef;
+        border-radius: 10px;
+        margin-bottom: 1vh;
+        width: 70vw;
+        height: 71vh;
+    }
+
+    .speakers_images {
+        width: 80vw;
+        text-align: center;
+        position: relative;
+        left: 10vw;
+        padding-top: 2vh;
+    }
+}
+/* @media (min-width: 413px) and (max-width: 737px) {
+    .INF {
+        height: 95vh;
+        overflow-x: hidden;
+        text-align: center;
+    }
+    .ayush:hover {
+        transform: scale(1); 
+    }
+    .ayush {
+        margin-left: 1.5vw;
+        margin-right: 1.5vw ;
+        background: linear-gradient(
+            180deg,
+            #022049 0%,
+            rgba(2, 32, 73, 0) 100%
+        );
+        border: 4px solid #90e0ef;
+        border-radius: 10px;
+        margin-bottom: 1vh;
+        width: 95%;
+        height: 63vh;
+    }
+
+    .speakers_images {
+        width: 80vw;
+        text-align: center;
+        position: relative;
+        left: 10vw;
+        padding-top: 2vh;
+    }
+} */
+
 #Speakers_Scrollbar::-webkit-scrollbar {
     width: 10px;
 }
